# marvis-gateway-free

./: .gitignore  CONTRIBUTING.md  LICENSE  Marvis本地外壳启动器.bat  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
config/: third-party-api.example.toml
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md
scripts/: MarvisAgentWrapper.cs  MarvisPaths.ps1  MarvisShellLauncher-User.ps1  check-before-publish.ps1  get-local-model-adapter-status.ps1  get-marvis-local-shell-status.ps1  get-marvis-ui-patch-status.ps1  get-marvis-wrapper-shell-status.ps1  install-marvis-agent-wrapper.ps1  patch-marvis-ui-loading-gate.ps1  restore-marvis-agent-wrapper.ps1  restore-marvis-ui-loading-gate.ps1  smoke-marvis-agent.js  start-local-model-adapter.ps1  start-marvis-local-shell.ps1  start-marvis-wrapper-shell.ps1  stop-local-model-adapter.ps1  stop-marvis-local-shell.ps1  stop-marvis-wrapper-shell.ps1  test-marvis-third-party-canary.js
src/marvis_gateway_lab/: agent_wrapper.py  agent_wrapper_main.py  api_launcher.py  capture.py  cli.py  conversation_store.py  explain.py  handoff.py  interventions.py  launcher.py  launcher_config.py  live.py  local_openai_adapter.py  marvis_events.py  probe.py  protocol.py  relay.py  report.py  rules.py  sanitize.py  status.py  summary.py
src/marvis_gateway_lab/providers/: __init__.py  base.py  openai_compatible.py
tests/: test_agent_wrapper.py  test_launcher_config.py  test_local_openai_adapter.py  test_marvis_local_shell_scripts.py
