[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marvis-gateway-lab"
version = "0.1.0"
description = "Windows adapter that routes Marvis local model traffic to an OpenAI-compatible API"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["websockets>=12"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
marvis-gateway-lab = "marvis_gateway_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
